# discovery-call-agent

./: .gitignore  README.md  notes.md  pyproject.toml
data/: contacts_dump.csv
data/conv_history/: transcript_<MagicMock name='mock.name' id='4563754960'>_2025-04-21_12-47-31.json  transcript_<MagicMock name='mock.name' id='4628766672'>_2025-04-22_15-20-58.json  transcript_<MagicMock name='mock.name' id='4747256096'>_2025-04-21_13-06-46.json  transcript_<MagicMock name='mock.name' id='4803044960'>_2025-04-22_19-28-15.json  transcript_<MagicMock name='mock.name' id='5071265744'>_2025-04-22_16-43-03.json  transcript_<MagicMock name='mock.name' id='5253932640'>_2025-04-22_19-31-09.json
data/post_call_analysis/: transcript_discovery-call-test-room_2025-04-26_23-26-39_call_analysis.json  transcript_discovery-call-test-room_2025-04-27_01-03-00_c92dcebd_call_analysis.json
src/: agent.py  gc_creds.json  post_processing.py  prompts.py  utils.py
