[tool.poetry]
name = "discovery-call-agent"
version = "0.1.0"
description = ""
authors = ["Abhishek Ranjan <aviranjan444@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pip = "^25.0.1"
livekit = "^1.0.1"
livekit-api = "^0.8.2"
langchain = "^0.3.21"
python-dotenv = "^1.0.1"
fastapi = "^0.115.11"
livekit-plugins-noise-cancellation = "^0.2.1"
livekit-agents = {version = ">=1.0rc,<2.0", extras = ["assemblyai", "cartesia", "deepgram", "google", "openai", "silero", "turn-detector"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
