[tool.poetry]
name = "discovery-call-agent"
version = "0.1.0"
description = ""
authors = ["Abhishek Ranjan <aviranjan444@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pip = "^25.0.1"
pandas = "^2.2.3"
livekit = "^1.0.6"
livekit-api = "^1.0.2"
langchain = "^0.3.23"
langgraph = "^0.3.31"
google-genai = "^1.11.0"
livekit-agents = {version = ">=1.0,<2.0", extras = ["anthropic", "assemblyai", "cartesia", "deepgram", "elevenlabs", "google", "groq", "openai", "silero", "turn-detector"]}
livekit-plugins-noise-cancellation = "^0.2.1"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
